--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -253,7 +253,7 @@ announcer:
     - 'Spawn killing is forbidden!'
     - 'Invisible potions are allowed!'
     - 'Serial griefing and trolling will result in a permanent ban!'
-    - 'TotalFreedom does not accept any form of donations!'
+    - 'FaZeIFreedom does not accept any form of donations!'
     - 'Racism, nazism, and sexism are strictly forbidden!'
     - 'Join our discord for more info!'
 
